--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,6 +1,8 @@
 .NavBar {
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
     margin: 0 20px;
+    height: 50px;
 }
